# disease-simulation

./: CMakeLists.txt  README.md  main.cpp
backend/: Board.cpp  Board.h  Disease.cpp  Disease.h  Person.cpp  Person.h  Simulation.cpp  Simulation.h  State.h
frontend/: Window.cpp  Window.h
